third_party/rust/cxx/v1/crate/tests/ui/data_enums.stderr
error: enums with data are not supported yet
 --> $DIR/data_enums.rs:4:9
  |
4 |         Field(u64),
  |         ^^^^^^^^^^
